--- a/css/main.css
+++ b/css/main.css
@@ -27,9 +27,10 @@ a {
 }
 
 .container {
-  width: 1200px;
+  width: 1000px;
   padding-right: 15px;
   padding-left: 15px;
+  margin: 0 auto;
 }
 
 .row {
@@ -52,5 +53,35 @@ a {
         -ms-flex: 95%;
             flex: 95%;
   }
+}
+
+.top--body {
+  height: 75vh;
+  background-color: #f0f2f5;
+}
+
+.top--body .container {
+  height: 100%;
+}
+
+.top--body .container .row {
+  padding-top: 13rem;
+}
+
+.top--body .container .row .top--body__left {
+  text-align: left;
+  background-color: crimson;
+}
+
+.top--body .container .row .top--body__left .top--body__logo {
+  margin: -28px;
+}
+
+.top--body .container .row .top--body__left .top--body__subttl {
+  font-family: "Sf Pro Normal", Helvetica, Arial, sans-serif;
+  line-height: 32px;
+  font-size: 28px;
+  font-weight: normal;
+  width: 500px;
 }
 /*# sourceMappingURL=main.css.map */
