--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,48 @@ a {
   text-decoration: none;
 }
 
+.btn1 {
+  height: 48px;
+  width: 100%;
+  font-family: "Vazirmatn", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  color: white;
+  border-radius: 6px;
+  background-color: #1877f2;
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.btn1:hover {
+  background-color: #166fe5;
+}
+
+.btn {
+  width: 185px;
+  height: 48px;
+  padding: 0 16px;
+  vertical-align: middle;
+  font-family: "Vazirmatn", sans-serif;
+  font-size: 17px;
+  font-weight: 700;
+  color: white;
+  background-color: #42b72a;
+  outline: 0;
+  border: 0;
+  border-radius: 6px;
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.btn:hover {
+  background-color: #36a420;
+}
+
 .container {
   width: 1000px;
   padding-right: 15px;
@@ -78,10 +120,23 @@ a {
 
 .top--body .container .row .top--body__right {
   padding-top: 9rem;
-  width: 350px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .top--body .container .row .top--body__right .main-form {
+  width: 390px;
   background-color: white;
   padding: 1rem;
   border-radius: 8px;
@@ -90,7 +145,7 @@ a {
 }
 
 .top--body .container .row .top--body__right .main-form .input {
-  padding: 12px 14px;
+  padding: 14px 16px;
   border: 1px solid #dddfe2;
   border-radius: 6px;
 }
@@ -104,6 +159,71 @@ a {
 }
 
 .top--body .container .row .top--body__right .main-form .pass {
-  margin: 1.5rem 0;
+  margin: 1rem 0;
+}
+
+.top--body .container .row .top--body__right .main-form .fm-btn {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.top--body .container .row .top--body__right .main-form .ftext {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.top--body .container .row .top--body__right .main-form .ftext .forgot--text {
+  line-height: 18px;
+  font-family: "Vazirmatn", sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  color: #1877f2;
+  margin-top: 16px;
+}
+
+.top--body .container .row .top--body__right .main-form .ftext .forgot--text:hover {
+  text-decoration: underline;
+}
+
+.top--body .container .row .top--body__right .main-form .line {
+  margin: 20px 0;
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #dddfe2;
+}
+
+.top--body .container .row .top--body__right .celeb {
+  font-family: "Sf Pro Normal", Helvetica, Arial, sans-serif;
+  color: #1c1e21;
+  font-size: 14px;
+  font-weight: normal;
+  margin-top: 2rem;
+}
+
+.top--body .container .row .top--body__right .celeb .celeb--link {
+  font-family: "Sf Pro Bold", Helvetica, Arial, sans-serif;
+  color: #1c1e21;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.top--body .container .row .top--body__right .celeb .celeb--link:hover {
+  text-decoration: underline;
 }
 /*# sourceMappingURL=main.css.map */
