--- a/scss/_basic.scss
+++ b/scss/_basic.scss
@@ -1,3 +1,4 @@
+@import "colors";
 * {
   margin: 0;
   padding: 0;
@@ -10,4 +11,42 @@ li {
 
 a {
   text-decoration: none;
+}
+
+.btn1 {
+  height: 48px;
+  width: 100%;
+  font-family: $font-Vazir;
+  font-size: 20px;
+  font-weight: 700;
+  color: white;
+  border-radius: 6px;
+  background-color: $blue-color;
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  &:hover {
+    background-color: $blue-d-color;
+  }
+}
+
+.btn {
+  width: 185px;
+  height: 48px;
+  padding: 0 16px;
+  vertical-align: middle;
+  font-family: $font-Vazir;
+  font-size: 17px;
+  font-weight: 700;
+  color: white;
+  background-color: $green-color;
+  outline: 0;
+  border: 0;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  &:hover {
+    background-color: $green-d-color;
+  }
 }
