--- a/scss/main.scss
+++ b/scss/main.scss
@@ -37,9 +37,13 @@
 
       .top--body__right {
         padding-top: 9rem;
-        width: 350px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
         .main-form {
+          width: 390px;
           background-color: white;
           padding: 1rem;
           border-radius: 8px;
@@ -47,10 +51,10 @@
             0 8px 16px rgba(0, 0, 0, 0.1);
 
           .input {
-            // padding: 6px;
-            padding: 12px 14px;
+            padding: 14px 16px;
             border: 1px solid #dddfe2;
             border-radius: 6px;
+
             .inp--text {
               width: 330px;
               height: 22px;
@@ -60,7 +64,54 @@
             }
           }
           .pass {
-            margin: 1.5rem 0;
+            margin: 1rem 0;
+          }
+          .fm-btn {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+          .ftext {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .forgot--text {
+              line-height: 18px;
+              font-family: $font-Vazir;
+              font-size: 14px;
+              font-weight: normal;
+              color: $blue-color;
+              margin-top: 16px;
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+          }
+
+          .line {
+            margin: 20px 0;
+            display: block;
+            width: 100%;
+            height: 1px;
+            background-color: #dddfe2;
+          }
+        }
+
+        .celeb {
+          font-family: $font-sf-regular;
+          color: $dark-color;
+          font-size: 14px;
+          font-weight: normal;
+          margin-top: 2rem;
+          .celeb--link {
+            font-family: $font-sf-Bold;
+            color: $dark-color;
+            font-size: 14px;
+            font-weight: 600;
+            &:hover {
+              text-decoration: underline;
+            }
           }
         }
       }
