--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,16 @@ a {
   background-color: #36a420;
 }
 
+.d-felx-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .container {
   width: 1000px;
   padding-right: 15px;
