--- a/scss/main.scss
+++ b/scss/main.scss
@@ -120,3 +120,55 @@
 }
 
 // -------- Bottom--body --------
+
+.bottom--body__head {
+  padding-top: 20px;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #dddfe2;
+
+  .body--lang__list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+    .lang--list__items {
+      padding-right: 10px;
+      font-family: $font-Vazir;
+      color: $gray-color;
+      font-size: 12px;
+
+      .lang--list__link {
+        font-family: $font-Vazir;
+        color: $gray-color;
+        font-size: 12px;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      .lang--list__btn {
+        width: 12px;
+        height: 18px;
+        line-height: 18px;
+        padding: 0 8px;
+        font-size: 25px;
+        font-weight: 400;
+        color: black;
+        font-family: $font-Vazir;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-sizing: content-box;
+        border-radius: 2px;
+        background-color: #f5f6f7;
+        outline: none;
+        border: 1px solid #ccd0d5;
+        cursor: pointer;
+        transition: all 0.2s;
+        &:hover {
+          background-color: #ebedf0;
+        }
+      }
+    }
+  }
+}
